<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/d51"
        android:background="@drawable/top_banner" >

        <ImageView
            android:id="@id/go_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:paddingLeft="@dimen/d15"
            android:src="@drawable/d_btn_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/str_feedback"
            android:textColor="@color/color_black"
            android:textSize="@dimen/f18" />

<!--         <ImageView -->
<!--             android:id="@id/go_list" -->
<!--             android:layout_width="wrap_content" -->
<!--             android:layout_height="wrap_content" -->
<!--             android:layout_alignParentRight="true" -->
<!--             android:layout_centerVertical="true" -->
<!--             android:paddingRight="@dimen/d15" -->
<!--             android:src="@drawable/d_btn_feedlist" /> -->
    </RelativeLayout>

    <EditText
        android:id="@id/input_area"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@null"
        android:gravity="top"
        android:hint="@string/str_feedback_info"
        android:inputType="textMultiLine"
        android:paddingLeft="@dimen/d10"
        android:paddingRight="@dimen/d10"
        android:paddingTop="@dimen/d10" >

        <requestFocus />
    </EditText>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/d12"
        android:background="@drawable/feedback_shadow_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@id/input_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/d5"
            android:layout_weight="1"
            android:hint="@string/str_qq_info"
            android:textSize="@dimen/d14" />

        <Button
            android:id="@id/btn_submit"
            style="@color/color_alpha_half"
            android:layout_width="@dimen/d70"
            android:layout_height="@dimen/d45"
            android:layout_margin="@dimen/d5"
            android:background="@drawable/d_btn_confirm"
            android:text="@string/str_btn_submit"
            android:textColor="@color/color_white"
            android:textSize="@dimen/d15" />
    </LinearLayout>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5.0dip"
        android:background="@drawable/d_page_beautiful" />

</LinearLayout>