<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@id/lay_index_bg"
    android:background="@drawable/bg_welcome_page" >

    <RelativeLayout
        android:id="@+id/bottom_relative"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/color_alpah_white"
        android:padding="@dimen/d20" >

        <ImageView
            android:id="@+id/logo"
            android:layout_width="@dimen/d70"
            android:layout_height="@dimen/d70"
            android:layout_alignParentLeft="true"
            android:src="@drawable/icon" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/d15"
            android:layout_toRightOf="@id/logo"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/color_black"
                android:textSize="@dimen/f18" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_info"
                android:textSize="@dimen/f16" />
        </LinearLayout>

        <ImageView
            android:id="@+id/welcomeGo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/d20"
            android:clickable="true"
            android:src="@drawable/d_index" />
    </RelativeLayout>

    <TextView
        android:id="@+id/textview"
        style="@style/text_shadow"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/d55"
        android:layout_above="@id/bottom_relative"
        android:layout_centerHorizontal="true"
        android:background="@color/color_gray"
        android:maxLines="2"
        android:padding="@dimen/d10"
        android:text="@string/app_wisdom"
        android:textColor="@color/color_white" />
    <!-- android:layout_alignParentTop="true" -->

    
    <LinearLayout
        android:id="@id/AdIndexLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottom_relative"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >
    </LinearLayout>

</RelativeLayout>